foundations/modules/networking.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Create base networking
Parameters:
  project:
    Type: String
    Description: Alphanumeric and underscore
    MinLength: "4"
    MaxLength: "12"
    AllowedPattern: ^(\d|\w)+$
  vpcNetworkAddress:
    Type: String
    Description: CIDR block
    MinLength: "9"
    MaxLength: "18"
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
  availabilityZone1:
    Type: "AWS::EC2::AvailabilityZone::Name"
    Description: Availability zone
  availabilityZone2:
    Type: "AWS::EC2::AvailabilityZone::Name"
    Description: Availability zone
  publicSubnet01Address:
    Type: String
    Description: CIDR block
    MinLength: "9"
    MaxLength: "18"
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
  publicSubnet02Address:
    Type: String
    Description: CIDR block
    MinLength: "9"
    MaxLength: "18"
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
  privateSubnet01Address:
    Type: String
    Description: CIDR block
    MinLength: "9"
    MaxLength: "18"
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
  privateSubnet02Address:
    Type: String
    Description: CIDR block
    MinLength: "9"
    MaxLength: "18"
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
Rules:
  DifferentAZs:
    Assertions:
      - Assert: !Not 
          - !Equals 
            - !Ref availabilityZone1
            - !Ref availabilityZone2
        AssertDescription: The Availability Zones must be different
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref vpcNetworkAddress
      EnableDnsHostnames: True
      Tags:
        - Key: Name
          Value: !Sub "vpc-${project}"
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "igw-${project}"
  AttachIGW:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicSubnet01:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref publicSubnet01Address
      AvailabilityZone: !Ref availabilityZone1
      Tags:
        - Key: Name
          Value: !Sub "pubsnet01-${project}"
  PublicSubnet02:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref publicSubnet02Address
      AvailabilityZone: !Ref availabilityZone2
      Tags:
        - Key: Name
          Value: !Sub "pubsnet02-${project}"
  PrivateSubnet01:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref privateSubnet01Address
      AvailabilityZone: !Ref availabilityZone1
      Tags:
        - Key: Name
          Value: !Sub "privsnet01-${project}"
  PrivateSubnet02:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref privateSubnet02Address
      AvailabilityZone: !Ref availabilityZone2
      Tags:
        - Key: Name
          Value: !Sub "privsnet02-${project}"
  EIP01:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "eip01-${project}"
  NatGateway01:
    DependsOn: AttachIGW
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt 
        - EIP01
        - AllocationId
      SubnetId: !Ref PublicSubnet01
      Tags:
        - Key: Name
          Value: !Sub "natgw01-${project}"
  EIP02:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "eip02-${project}"
  NatGateway02:
    DependsOn: AttachIGW
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt 
        - EIP02
        - AllocationId
      SubnetId: !Ref PublicSubnet02
      Tags:
        - Key: Name
          Value: !Sub "natgw02-${project}"
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "pubrt-${project}"
  PublicRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnet01RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable
  PublicSubnet02RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTable01:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "privrt01-${project}"
  PrivateRouteTable02:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "privrt01-${project}"
  NatGateway01Route:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway01
  NatGateway02Route:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTable02
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway02
  PrivateSubnet01RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref PrivateRouteTable01
  PrivateSubnet02RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnet02
      RouteTableId: !Ref PrivateRouteTable02
Outputs:
  vpcId:
    Description: VPC Id
    Value: !Ref VPC
  az01:
    Description: Availability Zone 1
    Value: !GetAtt 
      - PublicSubnet01
      - AvailabilityZone
  az02:
    Description: Availability Zone 2
    Value: !GetAtt 
      - PublicSubnet02
      - AvailabilityZone
  azList:
    Description: AZ Comma Separated List
    Value: 
      !Join
        - ','
        - - !GetAtt PublicSubnet01.AvailabilityZone
          - !GetAtt PublicSubnet02.AvailabilityZone
  publicSubnet01Id:
    Description: Public subnet 1
    Value: !Ref PublicSubnet01
  publicSubnet02Id:
    Description: Public subnet 2
    Value: !Ref PublicSubnet02
  publicSubnetsIdList:
    Description: Public subnet Ids Comma Separated List
    Value: 
      !Join
        - ','
        - - !Ref PublicSubnet01
          - !Ref PublicSubnet02
  privateSubnet01Id:
    Description: Private app subnet 1
    Value: !Ref PrivateSubnet01
  privateSubnet02Id:
    Description: Private app subnet 2
    Value: !Ref PrivateSubnet02
  privateSubnetsIdList:
    Description: Private subnet Ids Comma Separated List
    Value: 
      !Join
        - ','
        - - !Ref PrivateSubnet01
          - !Ref PrivateSubnet02
